// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetPopulation renders WidgetPopulation component with loading state 1`] = `
<div>
  <div
    class="flex h-full grow break-inside-avoid flex-col overflow-hidden rounded-2xl border border-blue-100 bg-white p-6"
  >
    <header
      class="flex items-start justify-between"
    >
      <h2
        class="text-base text-blue-600"
      >
        Population
      </h2>
      <button
        aria-controls="radix-:r5:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="flex h-6 w-6 items-center justify-center"
        data-state="closed"
        type="button"
      >
        <svg
          class="text-blue-600"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </button>
    </header>
    <div
      class="animate-pulse rounded-md bg-primary/10 h-12"
      data-testid="card-loader"
    />
  </div>
</div>
`;

exports[`WidgetPopulation renders WidgetPopulation component without crashing 1`] = `
<div>
  <div
    class="flex h-full grow break-inside-avoid flex-col overflow-hidden rounded-2xl border border-blue-100 bg-white p-6"
  >
    <header
      class="flex items-start justify-between"
    >
      <h2
        class="text-base text-blue-600"
      >
        Population
      </h2>
      <button
        aria-controls="radix-:r1:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="flex h-6 w-6 items-center justify-center"
        data-state="closed"
        type="button"
      >
        <svg
          class="text-blue-600"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </button>
    </header>
    <div>
      <div
        class="flex items-end space-x-2"
      >
        <span
          class="text-4xl font-bold text-blue-600"
        >
          100,000
        </span>
        <span
          class="relative bottom-1.5 text-xs font-medium text-gray-500"
        >
          inhabitants
        </span>
      </div>
    </div>
  </div>
</div>
`;
